[SKIRON-T-2] - add spring security