@@ -2,11 +2,10 @@ package com.remcoil.skiron.service;
 
 import com.remcoil.skiron.database.repository.ControlActionRepository;
 import com.remcoil.skiron.model.action.control.ControlActionBrief;
-import com.remcoil.skiron.model.action.control.ControlActionRequest;
+import com.remcoil.skiron.model.action.control.ControlActionPostRequest;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ControlActionService {
@@ -19,10 +18,10 @@ public class ControlActionService {
     public List<ControlActionBrief> getAll() {
         return controlActionRepository.findAll().stream()
                 .map(ControlActionBrief::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public ControlActionBrief create(ControlActionRequest actionRequest) {
+    public ControlActionBrief create(ControlActionPostRequest actionRequest) {
         return ControlActionBrief.fromEntity(
                 controlActionRepository.save(actionRequest.toEntity())
         );
